--- a/app/views/stops/index.html.erb
+++ b/app/views/stops/index.html.erb
@@ -4,7 +4,7 @@
   <% @stops.each do |stop| %>
 
     <li>
-      <%= stop.name %>
+      <%= link_to stop.name, stop_path(stop) %>
     </li>
   <% end %>
 </ul>
