--- a/app/views/stops/show.html.erb
+++ b/app/views/stops/show.html.erb
@@ -1,1 +1,8 @@
-<div id="app" />
+<div id="app"/>
+
+<%=@stop.reviews.each do |review| %>
+
+  <%= review.rating %>
+  <%= review.body %>
+
+<% end %>
