--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 
   <div class="top-bar">
     <div class="top-bar-left">
-      <ul class="dropdown menu" data-dropdown-menu>
+      <ul class="dropdown menu">
         <li class="menu-text">The Morning T</li>
         <li>
           <%= link_to "All Stops", stops_path %>
@@ -56,14 +56,17 @@
     </div>
   <%- end -%>
 
-  <%= yield %>
+  <div class="grid-x">
+    <div class="cell small-1"></div>
+    <div class="cell small-8"><%= yield %></div>
+  </div>
+
 
   <%= javascript_include_tag 'application' %>
 
   <%- if Rails.env.development? || Rails.env.test? -%>
     <%= javascript_tag do %>
-    window.railsEnv = '
-    <%= Rails.env %>'
+    window.railsEnv = '<%= Rails.env %>'
     <%- end -%>
   <%- end -%>
 
