--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,13 @@
     </div>
 
     <div class="top-bar-right">
+      <div class="t-logo">
+      <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="50" height="50">
+      <circle cx="25" cy="25" r="23.9" stroke="#000" stroke-width="2.2" fill="#fff"/>
+      <path d="M92,138.5h316v79.5h-118.25v194h-79.5v-194h-118.25z"/>
+      </svg>
+      </div>
+
       <ul class="menu">
         <%- if current_user -%>
           <li>
