added T logo, colored review components

--- a/app/assets/stylesheets/stops_show_styles.css
+++ b/app/assets/stylesheets/stops_show_styles.css
@@ -23,6 +23,7 @@
   width: 30vw;
   border: 1px solid #e2e2e2;
   box-shadow: 10px 10px 5px #e2e2e2;
+  background-color: #d1d1d1
 }
 
 .reviewLabel{
