--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,9 @@
           <li>
             <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
           </li>
+          <%- if current_user[:profile_photo] != nil -%>
+            <%= image_tag("/uploads/user/profile_photo/#{current_user.id}/#{current_user.profile_photo.file.file.split("/")[-1]}") %>
+          <%- end -%>
         <%- else -%>
           <li>
             <%= link_to 'Sign Up', new_user_registration_path %>
@@ -47,6 +50,7 @@
       </ul>
     </div>
   </div>
+
 
   <%- flash.each do |key, value| -%>
     <div class="flash flash-<%= key %>">
@@ -71,3 +75,4 @@
   <%= yield :extra_footer %>
   </body>
 </html>
+<!-- , style: 'height:30px; width:30px;'  -->
