--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,14 @@
     </div>
     <div class="top-bar-right">
       <ul class="menu">
+        <%- if current_user && current_user.admin? -%>
+          <li>
+            <%= link_to 'All reviews', admin_reviews_path %>
+          </li>
+          <li>
+            <%= link_to 'New stop', new_stop_path %>
+          </li>
+        <% end  %>
         <%- if current_user -%>
           <li>
             <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
