--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,12 +32,20 @@
     </div>
     <div class="top-bar-right">
       <ul class="menu">
+        <%- if current_user && current_user.admin? -%>
+          <li>
+            <%= link_to 'All reviews', admin_reviews_path %>
+          </li>
+          <li>
+            <%= link_to 'New stop', new_stop_path %>
+          </li>
+        <% end  %>
         <%- if current_user -%>
           <li>
             <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
           </li>
           <%- if current_user[:profile_photo] != nil -%>
-            <%= image_tag("/uploads/user/profile_photo/#{current_user.id}/#{current_user.profile_photo.file.file.split("/")[-1]}") %>
+            <%= image_tag("https://s3.amazonaws.com/the-morning-t/uploads/user/profile_photo/#{current_user.id}/#{current_user.profile_photo.path.split("/")[-1]}") %>
           <%- end -%>
         <%- else -%>
           <li>
