--- a/app/views/stops/index.html.erb
+++ b/app/views/stops/index.html.erb
@@ -1,5 +1,6 @@
 
 <div><br/></div>
+<h2 class=<%= @color.downcase %>><%= @line %></h2>
 <div>
   <% @stops.each do |stop| %>
     <p class="stop-index">
