Updating popup copy to prevent ambiguous test result.

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -6,7 +6,7 @@
       </div>
       <div>
         <p class = "welcome_nav">
-          <%= link_to 'Sign In', new_user_session_path %>, <%= link_to 'Sign Up', new_user_registration_path %>, or <%= link_to "View All Stops", stops_path %>.
+          <%= link_to 'Sign In', new_user_session_path %>, <%= link_to 'Create An Account', new_user_registration_path %>, or <%= link_to "View All Stops", stops_path %>.
         </p>
       </div>
     </div>
