update bkg image to s3, fix welcome popup div sizing.

--- a/app/assets/stylesheets/homes_stylesheet.css
+++ b/app/assets/stylesheets/homes_stylesheet.css
@@ -1,5 +1,5 @@
 .home{
-  background: url("2013_unofficial_MBTA_subway_map_by_Michael_Kvrivishvili.png") no-repeat center center fixed;
+  background: url("https://s3.amazonaws.com/the-morning-t/uploads/site_images/2013_unofficial_MBTA_subway_map_by_Michael_Kvrivishvili.png") no-repeat center center fixed;
   color: white;
   height: 100vh;
 }
@@ -14,29 +14,29 @@
 }
 
 .welcome{
- max-width: 50vw;
- height: 25vh;
- background-color: white;
- border-radius: 15px;
- border: 3px solid #33333399;
- box-shadow: 10px 10px 5px #6d6d6d;
- margin: auto;
- color: black;
- font-size: 2em;
- font-weight: bolder;
- text-align: center;
- padding: 30px;
- vertical-align: middle;
+  max-width: 50vw;
+  background-color: white;
+  border-radius: 15px;
+  border: 3px solid #33333399;
+  box-shadow: 10px 10px 5px #6d6d6d;
+  margin: auto;
+  color: black;
+  font-size: 2em;
+  font-weight: bolder;
+  text-align: center;
+  padding: 30px;
+  vertical-align: middle;
 }
 
 .welcome_nav{
   font-size: 20px
 }
 
+
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    height: 100%;
+  height: 100%;
 }
